--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 ---
 <html lang="en">
   <head>
@@ -34,14 +35,19 @@
 		from { transform: translateX(0); }
 		to { transform: translateX(-50%); }
 	  }
-
 	  </style>
   </head>
-  <body class="flex w-screen h-screen items-center">
+  <body class="flex flex-col w-screen h-screen items-center justify-center">
     <div class="marquee">
 	  <div class="track">
-		<div class="content">&nbsp;bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey</div>
+		<div class="content">bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey</div>
 	  </div>
 	</div>
+	<Image src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif?20201022124448" alt="bababooey makes the world go round" width={700} height={700} />
   </body>
+  <div class="marquee">
+	<div class="track">
+	  <div class="content">bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey bababooey</div>
+	</div>
+  </div>
 </html>
