Compress the earth

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import earthGif from "../images/earth.gif"
+import earthGif from "../images/earth_small.gif"
 ---
 <html lang="en">
   <head>
